src/components/nav/partials/NavProfileCard.scss
@import "/src/styles/extend.scss";

div.nav-profile-card {
    --avatar-size: 140px;
    --border-size: 6px;
    --info-margin-top: 10px;
    --offset-status-circle: 15px;
    @media(min-height: 760px) {--avatar-size: 150px; --info-margin-top: 11px;}
    @media(min-height: 800px) {--avatar-size: 155px}
    @media(max-height: 690px) {--avatar-size: 130px}
    @media(max-height: 650px) {--avatar-size: 120px}

    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    background-color: transparent!important;
    position: relative;
    margin: 15px;

    &-avatar {
        width: var(--avatar-size);
        height: var(--avatar-size);
        border: var(--border-size) solid var(--theme-card-background-accent);
        border-radius: 50%;

        img.image-view-img {
            object-fit: cover;
            object-position: center;
        }
    }

    &-status-circle {
        position: absolute;
        top: calc(var(--avatar-size) - var(--offset-status-circle));
        left: calc(50% + var(--avatar-size)/2 - var(--offset-status-circle)*1.2);
    }

    &-info {
        display: flex;
        align-items: center;
        flex-direction: column;
        margin-top: var(--info-margin-top);
        margin-bottom: 3px;
        user-select: none;
        @include media-breakpoint-down($max-breakpoint-for-tabbed-interface) {
            width: 100%;
            align-items: center;
            margin-top: 14px;
            margin-bottom: 8px;
        }
    }

    h1.nav-profile-card-name {
        position: relative;
        text-align: center;

        margin-left: 10px;
        margin-right: 10px;
        margin-bottom: 4px;
        font-size: 1.25rem!important;
        line-height: 1.8rem!important;

        @include media-breakpoint-down($max-breakpoint-for-tabbed-interface) {
            font-size: 1.5rem!important;
            margin-bottom: 7px;
        }
    }

    h1.nav-profile-card-name-with-audio-button {
        @include media-breakpoint-down($max-breakpoint-for-tabbed-interface) {
            margin-left: 65px;
            margin-right: 65px;

            div.audio-button-wrapper {
                position: absolute;
                left: calc(100% + 8px);
                top: 50%;
                transform: translateY(-50%);
            }
        }
    }

    div.nav-profile-card-role {
        display: flex;
        align-items: center;
        justify-content: center;
        text-align: center;
        color: var(--theme-secondary);
        font-size: 0.9rem;
        min-height: 25px;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        max-width: min(100%, 260px);
        @include media-breakpoint-down($max-breakpoint-for-tabbed-interface) {
            align-items: center;
            justify-content: center;
            text-align: center;
            font-size: 0.95rem;
            min-height: 25px;
            width: 100%;
            max-width: min(100%, 220px);
        }

        span.text-typer-span {
            display: inline-flex;
            align-items: center;
            justify-content: center;
            text-align: center;
            width: 100%;
        }
    }

}

div.nav-profile-card-shrink {
    --avatar-size: 80px;
    --border-size: 3px;
    --offset-status-circle: 12px;

    div.nav-profile-card-avatar {
        border-radius: 50%!important;
    }

    div.nav-profile-card-info {
        display: none;
    }
}

